phpunit magic variable from insert date to other methods
